[package]
name = "rust-merkle"
description = "A simple Merkle tree implementation in Rust"
authors = ["Khang Nguyen Truong <nguyentruongkhang22@gmail.com>"]
version = "0.1.2"
edition = "2021"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
sha3 = "0.10.0"
